--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body{
 }
 
 header {
-    margin-top: 1rem;
+    margin-top: 2rem;
     z-index: 20;
 }
 
